@@ -1,3 +1,8 @@
+2004-08-09  Davyd Madeley  <davyd@madeley.id.au>
+
+	* battstat_applet.c: Another largish string break (related to the last
+	one). Things are generally fixed up. Closes bug #149586.
+
 2004-08-08  Davyd Madeley  <davyd@ucc.asn.au>
 
 	* battstat_applet.c: Huge string break. Improved all strings to give
